Remove DummySkylightComponent from production

--- a/dummy/build.gradle
+++ b/dummy/build.gradle
@@ -11,12 +11,12 @@ apply from: '../publish.gradle'
 dependencies {
     api project(':skylight')
 
+    implementation deps.javaxInject
     implementation deps.kotlinStdLib
 
-    implementation deps.dagger
-    kapt deps.daggerCompiler
-
     testImplementation deps.junit
+    testImplementation deps.dagger
+    kaptTest deps.daggerCompiler
 }
 
 sourceCompatibility = '1.8'
