--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 include ':skylight'
-include ':calculator', ':fake', ':sso'
+include ':calculator', ':fake', ':sunrise-sunset-org'
 include ':nothing'
