--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,8 @@ org.gradle.jvmargs=-Xmx1536m
 
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+# Publication information (for Startship):
+GROUP=dev.drewhamilton.skylight
+POM_ARTIFACT_ID=skylight
+VERSION_NAME=0.12.0
