Prepare next development version

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,4 +21,4 @@ kotlin.code.style=official
 # Publication information (for Startship):
 GROUP=dev.drewhamilton.skylight
 POM_ARTIFACT_ID=skylight
-VERSION_NAME=0.12.0
+VERSION_NAME=0.13.0-SNAPSHOT
