--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           java-version: 1.8
       - name: Assemble for release
-        run: ./gradlew clean assemble
+        run: ./gradlew clean assemble --stacktrace
       - name: Publish
         env:
           ORG_GRADLE_PROJECT_personalSonatypeIssuesUsername: >-
@@ -28,4 +28,4 @@ jobs:
             ${{ secrets.ORG_GRADLE_PROJECT_personalSonatypeIssuesPassword }}
           ORG_GRADLE_PROJECT_personalGpgKey: ${{ secrets.ORG_GRADLE_PROJECT_personalGpgKey }}
           ORG_GRADLE_PROJECT_personalGpgPassword: ${{ secrets.ORG_GRADLE_PROJECT_personalGpgPassword }}
-        run: ./gradlew publishReleasePublicationToMavenCentralRepository
+        run: ./gradlew publishReleasePublicationToMavenCentralRepository --stacktrace
