--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,10 @@
 # Project-wide Gradle settings.
 
+# Publication information:
+GROUP=dev.drewhamilton.skylight
+POM_ARTIFACT_ID=skylight
+VERSION_NAME=0.12.0
+
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
 # any settings specified in this file.
@@ -17,8 +22,3 @@ org.gradle.jvmargs=-Xmx1536m
 
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
-
-# Publication information (for Startship):
-GROUP=dev.drewhamilton.skylight
-POM_ARTIFACT_ID=skylight
-VERSION_NAME=0.12.0-SNAPSHOT
