--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: master
+    branches: [master]
   pull_request:
 
 jobs:
@@ -17,6 +17,6 @@ jobs:
         uses: actions/setup-java@v1
         with:
           # TODO: Multiple Java versions
-          java-version: 1.8
+          java-version: 11
       - name: Build # Including tests
         run: ./gradlew clean build --stacktrace
