--- a/build.gradle
+++ b/build.gradle
@@ -1,26 +1,12 @@
 buildscript {
-    ext.versions = [
-        kotlin: '1.4.10',
-        retrofit: '2.9.0',
-    ]
-    ext.deps = [
-        junit: "junit:junit:4.13",
-        kotlinReflect: "org.jetbrains.kotlin:kotlin-reflect:$versions.kotlin",
-        mockito: 'org.mockito:mockito-inline:2.28.2',
-        mockitoKotlin: 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0',
-        moshi: 'com.squareup.moshi:moshi-kotlin:1.10.0',
-        okHttpMockWebServer: 'com.squareup.okhttp3:mockwebserver:3.14.9',
-        retrofit: "com.squareup.retrofit2:retrofit:$versions.retrofit",
-        retrofitMoshiConverter: "com.squareup.retrofit2:converter-moshi:$versions.retrofit",
-    ]
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
-        classpath 'org.jetbrains.dokka:dokka-gradle-plugin:1.4.32'
-        classpath 'org.jetbrains.kotlinx:binary-compatibility-validator:0.8.0'
+        classpath(libs.kotlin.gradle)
+        classpath(libs.dokka)
+        classpath(libs.kotlinx.binaryCompatibilityValidator)
 
-        classpath 'dev.drewhamilton.extracare:extracare-gradle-plugin:0.3.0'
+        classpath(libs.poko)
 
-        classpath 'com.android.tools.build:gradle:7.0.4'
+        classpath(libs.android.gradle)
     }
     repositories {
         mavenCentral()
