--- a/skylight/build.gradle
+++ b/skylight/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'java-library'
 apply plugin: 'org.jetbrains.kotlin.jvm'
-apply plugin: 'dev.drewhamilton.extracare'
+apply plugin: 'dev.drewhamilton.poko'
 
 ext {
     artifactName = rootProject.POM_ARTIFACT_ID
