--- a/skylight/build.gradle
+++ b/skylight/build.gradle
@@ -10,6 +10,7 @@ apply from: '../publish.gradle'
 
 dependencies {
     testImplementation(libs.junit)
+    testImplementation(libs.kotlinx.coroutines.test)
 }
 
 sourceCompatibility = '1.8'
