--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,14 +16,12 @@ kotlin-reflect = { module = "org.jetbrains.kotlin:kotlin-reflect", version.ref =
 
 kotlinx-binaryCompatibilityValidator = { module = "org.jetbrains.kotlinx:binary-compatibility-validator", version = "0.12.1" }
 
-mockito = "org.mockito:mockito-inline:2.28.2"
-mockitoKotlin = "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
-
 moshi = "com.squareup.moshi:moshi-kotlin:1.10.0"
 
 okHttp-mockWebServer = "com.squareup.okhttp3:mockwebserver:3.14.9"
 
 poko = "dev.drewhamilton.poko:poko-gradle-plugin:0.11.0"
 
-retrofit-core = "com.squareup.retrofit2:retrofit:$versions.retrofit"
+retrofit-core = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+retrofit-mock = { module = "com.squareup.retrofit2:retrofit-mock", version.ref = "retrofit" }
 retrofit-moshi = { module = "com.squareup.retrofit2:converter-moshi", version.ref = "retrofit" }
