--- a/sunrise-sunset-org/build.gradle
+++ b/sunrise-sunset-org/build.gradle
@@ -21,8 +21,7 @@ dependencies {
     testImplementation(libs.junit)
     testImplementation(libs.kotlin.reflect)
     testImplementation(libs.okHttp.mockWebServer)
-    testImplementation(libs.mockito)
-    testImplementation(libs.mockitoKotlin)
+    testImplementation(libs.retrofit.mock)
 }
 
 sourceCompatibility = '1.8'
