--- a/calculator/build.gradle
+++ b/calculator/build.gradle
@@ -11,7 +11,10 @@ apply from: '../publish.gradle'
 dependencies {
     api project(':skylight')
 
+    implementation(libs.kotlinx.coroutines.core)
+
     testImplementation(libs.junit)
+    testImplementation(libs.kotlinx.coroutines.test)
 }
 
 sourceCompatibility = '1.8'
