--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install JDK
         uses: actions/setup-java@v1
         with:
-          # TODO: Multiple Java versions
-          java-version: 11
+          distribution: zulu
+          java-version: 19
       - name: Build # Including tests
         run: ./gradlew clean build --stacktrace
