--- a/calculator/build.gradle
+++ b/calculator/build.gradle
@@ -19,3 +19,8 @@ dependencies {
 
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
