--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 # Publication information:
 GROUP=dev.drewhamilton.skylight
 POM_ARTIFACT_ID=skylight
-VERSION_NAME=0.13.2
+VERSION_NAME=0.14.0-SNAPSHOT
 
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
